--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,7 +14,10 @@ body {
 /* MEDIA QUERY MAX-WIDTH 900px */
 @media only screen and (max-width: 900px) {
 	.section {
-		flex-direction: column;
+    flex-direction: column;
+		width: 95%;
+		min-height: 95%;
+		height: 95%;
 	}
 
 	.column {
@@ -23,8 +26,8 @@ body {
 	}
 
 	.column--left {
-		min-height: 34%;
-		height: 34%;
+		min-height: 40%;
+		height: 40%;
 		border-right: none;
 		border-bottom: 5px solid rgba(36, 36, 36, 0.9);
 		padding-top: 15px;
@@ -32,8 +35,8 @@ body {
 	}
 
 	.column--right {
-		min-height: 65%;
-		height: 65%;
+		min-height: 60%;
+		height: 60%;
 	}
 
 	.points {
@@ -55,6 +58,20 @@ body {
 
 /* MEDIA QUERY MAX-WIDTH 688px */
 @media only screen and (max-width: 688px) {
+  .section {
+    border-radius: 0px;
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
+	}
+  .column--left {
+    height: 50%;
+    min-height: 50%
+  }
+  .column--right {
+    height: 50%;
+    min-height: 50%
+  }
 	.points {
 		flex-direction: column;
 		align-items: center;
@@ -63,7 +80,7 @@ body {
 
 	.points__input-box {
 		width: 100%;
-		justify-content: center;
+		justify-content: flex-start;
 	}
 
 	.points__items-list-box {
@@ -72,7 +89,7 @@ body {
 	}
 
 	.points__items-list {
-		align-items: center;
+		align-items: flex-start;
 	}
 }
 
@@ -185,7 +202,7 @@ body {
 	background-color: #fdd633;
 	cursor: pointer;
 	outline: none;
-	transition: background-color 0.2s, border .2s;
+	transition: background-color 0.2s, border 0.2s;
 }
 
 .points__button:hover,
@@ -194,7 +211,7 @@ body {
 }
 
 .points__button:active {
-  background-color: #e4ba13;
+	background-color: #e4ba13;
 }
 
 /* ITEMS POINTS */
@@ -206,7 +223,7 @@ body {
 }
 
 .points__items-list {
-  position: relative;
+	position: relative;
 	width: 100%;
 	min-height: 100%;
 	padding-top: 10px;
@@ -235,7 +252,7 @@ body {
 	align-items: center;
 	padding: 3px 10px;
 	margin-bottom: 15px;
-	transition: background-color .2s;
+	transition: background-color 0.2s;
 	cursor: pointer;
 	outline: none;
 	z-index: 100;
@@ -259,19 +276,19 @@ body {
 }
 
 .item__count {
-  font-weight: bold;
+	font-weight: bold;
 }
 
 .item__text {
 	word-wrap: break-word;
 	max-width: 100%;
 	width: 100%;
-  height: 100%;
+	height: 100%;
 }
 
 .item__text,
 .point-map__text {
-  user-select: none;
+	user-select: none;
 }
 
 .item__button--delete {
@@ -326,7 +343,7 @@ body {
 	width: 50px;
 	height: 50px;
 	background-color: #f7ffff;
-  
+
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -338,7 +355,6 @@ body {
 	z-index: 100;
 	cursor: pointer;
 	transition: background-color 0.2s;
-
 }
 
 .point-map__text {
@@ -353,12 +369,12 @@ body {
 }
 
 .balloon-content__text {
-  font-weight: bold;
-  font-size: 16px;
+	font-weight: bold;
+	font-size: 16px;
 }
 
 .balloon-content__address {
-  font-size: 12px;
+	font-size: 12px;
 }
 
 /*  PRELOADER */
@@ -425,11 +441,12 @@ body {
 
 /* Move elements */
 .move-up {
-	animation: move-up .1s cubic-bezier(0.6, 0, 0.33, 0.99) 0s 1 normal forwards;
+	animation: move-up 0.1s cubic-bezier(0.6, 0, 0.33, 0.99) 0s 1 normal forwards;
 }
 
 .move-down {
-	animation: move-down .1s cubic-bezier(0.6, 0, 0.33, 0.99) 0s 1 normal forwards;
+	animation: move-down 0.1s cubic-bezier(0.6, 0, 0.33, 0.99) 0s 1 normal
+		forwards;
 }
 
 @keyframes slide-up {
